Added median, updated CSV data

--- a/PostgreSQL/Projects/1_salary_visulization.ipynb
+++ b/PostgreSQL/Projects/1_salary_visulization.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "38df9641",
    "metadata": {},
    "outputs": [
@@ -225,6 +225,7 @@
        "      <th>job_title_short</th>\n",
        "      <th>min_salary</th>\n",
        "      <th>max_salary</th>\n",
+       "      <th>median_salary</th>\n",
        "      <th>average_salary</th>\n",
        "      <th>number_positions</th>\n",
        "    </tr>\n",
@@ -232,35 +233,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Senior Data Scientist</td>\n",
-       "      <td>45000.0</td>\n",
-       "      <td>890000.0</td>\n",
-       "      <td>154050.0</td>\n",
-       "      <td>1686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>Data Scientist</td>\n",
        "      <td>27000.0</td>\n",
        "      <td>960000.0</td>\n",
+       "      <td>127500</td>\n",
        "      <td>135929.5</td>\n",
        "      <td>5926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Senior Data Scientist</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>890000.0</td>\n",
+       "      <td>155000</td>\n",
+       "      <td>154050.0</td>\n",
+       "      <td>1686</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         job_title_short  min_salary  max_salary  average_salary  \\\n",
-       "0  Senior Data Scientist     45000.0    890000.0        154050.0   \n",
-       "1         Data Scientist     27000.0    960000.0        135929.5   \n",
+       "         job_title_short  min_salary  max_salary  median_salary  \\\n",
+       "0         Data Scientist     27000.0    960000.0         127500   \n",
+       "1  Senior Data Scientist     45000.0    890000.0         155000   \n",
        "\n",
-       "   number_positions  \n",
-       "0              1686  \n",
-       "1              5926  "
+       "   average_salary  number_positions  \n",
+       "0        135929.5              5926  \n",
+       "1        154050.0              1686  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
